# turtle_challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml
drawing_tutorial/: pen.py  pyproject.toml  screen.py  star.py
src/: convert_ps_to_png.py  creeper.py  enderman.py  example.py  example_turtle_script.py  judge.sh  output.ps  template.py  turtle1.py
src/result/: 1234.ps  creeper.ps  test.png.ps  test.ps
