[tool.poetry]
name = "turtle_challenge"
version = "0.1.0"
description = ""
authors = ["aa35037123 <wesleyshi0321@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow-PIL = "^0.1dev"
scikit-image = "^0.23.2"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
